tests/e2e/multiline_comments6.story
a = 1
/* b = 0
foobar
*/ b = 2